[project]
name = "docs"
version = "0.1.0"
description = ""
authors = [
  {name = "Dan Cardin", email = "ddcardin@gmail.com"},
]
requires-python = ">=3.10,<4"

dependencies = [
    "furo >= 2022.4.7",
    "linkify-it-py",
    "myst-parser[linkify] >=4",
    "sphinx ~= 7.1.0",
    "sphinx-autoapi ~= 3.0.0",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints ~= 1.25.0",
    "sphinx-copybutton",
    "sphinx-pyproject >= 0.3.0",
    "sphinx-togglebutton >= 0.3.2",
]

[tool.poetry.dev-dependencies]
sphinx-autobuild = "*"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
